--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
-/public/uploads/
-/public/assets/
+/public/uploads
+/public/assets
 !/log/.keep
 !/tmp/.keep
 
