--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
-/public/*
+/public/uploads/
+/public/assets/
 !/log/.keep
 !/tmp/.keep
 
@@ -20,7 +21,6 @@
 /node_modules
 /yarn-error.log
 
-/public/assets
 .byebug_history
 
 # Ignore master key for decrypting credentials and more.
